vendor/cargo/auto_impl-0.5.0/tests/compile-fail/super_trait_not_implemented.stderr
error[E0277]: the trait bound `Box<Dog>: Supi` is not satisfied
  --> $DIR/super_trait_not_implemented.rs:18:18
   |
18 |     requires_foo(Box::new(Dog)); // shouldn't, because `Box<Dog>: Supi` is not satisfied
   |                  ^^^^^^^^^^^^^ the trait `Supi` is not implemented for `Box<Dog>`
   |
   = note: required because of the requirements on the impl of `Foo` for `Box<Dog>`
note: required by a bound in `requires_foo`
  --> $DIR/super_trait_not_implemented.rs:14:20
   |
14 | fn requires_foo<T: Foo>(_: T) {}
   |                    ^^^ required by this bound in `requires_foo`
